# quiet-slate-core

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  pytest.ini  requirements_sim.txt
configs/: half_half_highres.yaml  half_half_highres_cap4.yaml  half_half_highres_fast_ml.yaml  half_half_highres_fast_ml_afno.yaml  half_half_highres_fast_ml_afno_exp.yaml  half_half_highres_fast_ml_dw.yaml  half_half_highres_fast_ml_fno.yaml  half_half_highres_fast_physics.yaml  half_half_highres_mech0.yaml  half_half_highres_mech10.yaml  half_half_highres_mech20.yaml  half_half_highres_ml_afno_anchor2.yaml  half_half_highres_ml_afno_anchor5.yaml  half_half_highres_ml_afno_pure.yaml  half_half_highres_ml_afno_scale0005.yaml  half_half_highres_ml_afno_scaled.yaml  half_half_highres_ml_anchor100.yaml  half_half_highres_ml_fast.yaml  half_half_highres_ml_pure.yaml  notch_case.yaml  notch_case_gpu.yaml  notch_case_highres.yaml  slip_systems_hcp_2d.json  slip_systems_hcp_3d.json  twin_systems_hcp_3d.json
docs/: 50篇顶刊文献审查与理论结论_20260218.md  70篇文献合并综述与完整公式推导_20260218.md  formula_extraction_workflow.md  model_description.md  quickstart.md  theory_review_for_approval.md  中文操作手册.md  优化实现与测试报告_20260211.md  优化测试报告_20260212.md  优化测试报告_20260213.md  优化测试报告_20260213_235423.md  力学Krylov收敛专项调参报告_20260211.md  库与用法详解.md  改进分析与执行记录.md  本轮优化执行报告_20260211.md  本轮大改测试报告_20260214.md  机器学习与加速原理详解.md  目录结构说明.md  相场理论与参数总表.md  耦合一致性与ML优化报告_20260211.md  补充20篇顶刊回顾与本工作推理链_20260218.md  论文复核与公式代码核查_20260218_第二轮.md  论文对齐与理论一致性核查_20260218.md  跨尺度三阶段执行报告_20260218.md  跨尺度高级扩展测试报告_20260217.md
(+70 files in other folders)
