[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mg-coupled-pf"
version = "0.1.0"
description = "Mg alloy twinning-crystal-plasticity-corrosion coupled phase-field simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "tietouaming", email = "tietouaming@163.com" }
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mg_coupled_pf*"]
